--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -1,5 +1,5 @@
 [options]
-addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/odoo_modules,/mnt/odoo_modules/my_module,/mnt/odoo_modules/my_module2
+addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/odoo_modules,/mnt/odoo_modules/my_module,/mnt/odoo_modules/my_module2,/mnt/odoo_modules/my_module3
 admin_passwd = $pbkdf2-sha512$25000$VWpNyXnvHcM4h7B2bo1xTg$Pj5aEszL4LI2Cx5GkGDtKuOY5aC43o/zGCNJ/1osVa4.j7kg0FWr3Ka75hgz.i0nibwtFBe0nk6y7ukFeFQcpg
 csv_internal_sep = ,
 data_dir = /var/lib/odoo
